--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+	"start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.3",
     "nodemailer": "^6.8.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
